Created streamlit app

--- a/notebooks/00_initial_eda.ipynb
+++ b/notebooks/00_initial_eda.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Super Messy EDA "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View at your own risk "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook is to practice quering using SQL and perform EDA on the complaints data\n",
     "<p>\n",
     "<u> Update (2/16/26) </u>: While performing initial exploratory analysis, I realized that data fetching was incomplete which affects the validity of the analysis here \n"
@@ -2915,76 +2929,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = df.created_date[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4000   2025-04-21 13:44:02\n",
-       "4001   2025-04-21 13:37:30\n",
-       "4002   2025-04-21 13:37:18\n",
-       "4003   2025-04-21 13:24:30\n",
-       "4004   2025-04-21 12:43:55\n",
-       "4005   2025-04-21 11:33:16\n",
-       "4006   2025-04-21 10:47:10\n",
-       "4007   2025-04-21 09:45:28\n",
-       "4008   2025-04-21 09:16:17\n",
-       "4009   2025-04-21 09:00:27\n",
-       "Name: created_date, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b = df.created_date[4000:4010]\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0   2026-01-14 23:00:20\n",
-       "1   2026-01-14 20:14:42\n",
-       "2   2026-01-14 19:18:52\n",
-       "3   2026-01-14 18:56:59\n",
-       "4   2026-01-14 18:38:43\n",
-       "5   2026-01-14 17:25:02\n",
-       "6   2026-01-14 17:23:33\n",
-       "7   2026-01-14 17:22:20\n",
-       "8   2026-01-14 17:15:17\n",
-       "9   2026-01-14 17:12:22\n",
-       "Name: created_date, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [],
@@ -3232,95 +3176,6 @@
    ],
    "source": [
     "df[df[\"created_date\"].dt.year.eq(2025)][\"created_date\"].dt.month.value_counts(sort=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Remain calm!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import logging\n",
-    "logging.warning(\"Remain calm!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Hello, Warning!\n"
-     ]
-    }
-   ],
-   "source": [
-    "logging.basicConfig(format=\"%(leveuhjhjlname)s:%(name)s:%(message)s\")\n",
-    "logging.warning(\"Hello, Warning!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Something went wrong!\n"
-     ]
-    }
-   ],
-   "source": [
-    "logging.basicConfig(\n",
-    "    format=\"{asctime} - {levelname} - {message}\",\n",
-    "    style=\"{\",\n",
-    "    datefmt=\"%Y-%m-%d %H:%M\",\n",
-    ")\n",
-    "logging.error(\"Something went wrong!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "last_event_time = None\n",
-    "last_id = None\n",
-    "limit = 1000\n",
-    "\n",
-    "while True:\n",
-    "    if last_event_time is None:\n",
-    "        where_clause = f\"description = '{description}'\"\n",
-    "    else:\n",
-    "        where_clause = f\"\"\"\n",
-    "        description = '{description}'\n",
-    "        AND (\n",
-    "            event_time > '{last_event_time}'\n",
-    "            OR (event_time = '{last_event_time}' AND id > {last_id})\n",
-    "        )\n",
-    "        \"\"\"\n",
-    "    params = {\"$where\": where_clause, \"$order\": \"event_time ASC, id ASC\", \"$limit\": limit}\n",
-    "    response = fetch_complaints(params)\n",
-    "    df_chunk = pd.read_csv(StringIO(response.text), usecols=col_names)\n",
-    "    if df_chunk.empty:\n",
-    "        break\n",
-    "    df_chunk.to_sql(\"MY_TABLE\", con=engine, if_exists=\"append\", index=False)\n",
-    "    last_event_time = df_chunk.iloc[-1][\"event_time\"]\n",
-    "    last_id = df_chunk.iloc[-1][\"id\"]\n"
    ]
   },
   {
