--- a/notebooks/02_spatial_eda.ipynb
+++ b/notebooks/02_spatial_eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook looks at different plotting libraries (folium, matplotlib.pyplot, plotly)"
+    "### This notebook looks at different plotting libraries (folium, matplotlib.pyplot, plotly)"
    ]
   },
   {
@@ -21984,7 +21984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comments"
+    "### Concluding Remarks"
    ]
   },
   {
