--- a/notebooks/02_spatial_eda.ipynb
+++ b/notebooks/02_spatial_eda.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I deleted this file but this data can be downloaded from the NYC Open Data website "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
